# n-body-simulation-bha

./: .gitignore  CMakeLists.txt  README.md
data/: planets_and_moons_and_asteroids_state_vectors.csv  scenario1.csv
include/: barnes_hut.h  body.h  integration.h  io.h  kepler_to_cartesian.h  logger.h  octree.h
output/: final_state.csv  initial_state.csv  state_step_0.csv  state_step_100.csv  state_step_200.csv  state_step_300.csv  state_step_400.csv  state_step_500.csv  state_step_600.csv  state_step_700.csv  state_step_800.csv  state_step_900.csv
py-simulation-test/: matplt.py
src/: barnes_hut.cpp  barneshut  integration.cpp  io.cpp  kepler_to_cartesian.cpp  logger.cpp  main.cpp  nbody_simulation  octree.cpp  orbital_converter.cpp  output.csv  vector3D.h
